--- a/templates/mybookings.html
+++ b/templates/mybookings.html
@@ -1,58 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
-    <title>Hotel Name</title>
-</head>
-<body>
-    <h1>This is the mybookings template</h1>
-    
-    <h2>Old Bookings</h2>
-    <table>
+{% extends "base.html" %}
+
+{% block content %}
+
+<!-- Table to display bookings -->
+<h2>Past Bookings</h2>
+<table>
+    <tr>
+        <th>User:</th>
+        <th>Check-in Date:</th>
+        <th>Number of Nights:</th>
+        <th>Type of room:</th>
+    </tr>
+    {% for booking in mybookings %}
         <tr>
-            <th>User:</th>
-            <th>Check-in Date:</th>
-            <th>Number of Nights:</th>
-            <th>Type of room:</th>
+            <!-- Looks for older than today bookings -->
+            {% if booking.check_in_date < booking.today %} 
+                <td>{{ booking.user }}</td>
+                <td>{{ booking.check_in_date|date:"d/m/Y" }}</td>
+                <td>{{ booking.number_of_nights }}</td>
+                <td>{{ booking.type_of_room}}</td>
+            {% endif %}
         </tr>
-        {% for booking in mybookings %}
-            <tr>
-                {% if booking.check_in_date < booking.today %} 
-                    <td>{{ booking.user }}</td>
-                    <td>{{ booking.check_in_date|date:"d/m/Y" }}</td>
-                    <td>{{ booking.number_of_nights }}</td>
-                    <td>{{ booking.type_of_room}}</td>
-                {% endif %}
-            </tr>
-        {% empty %}
-        <tr><td>You don't have any old bookings.</td></tr>    
-        {% endfor %}
-    </table>
-    <h2>Next Bookings</h2>
-    <table>
+    <!-- Display message if no bookings are found -->
+    {% empty %}
+    <tr><td>You don't have any past bookings.</td></tr>    
+    {% endfor %}
+</table>
+<h2>Upcoming Bookings</h2>
+<table>
+    <tr>
+        <th>User:</th>
+        <th>Check-in Date:</th>
+        <th>Number of Nights:</th>
+        <th>Type of room:</th>
+    </tr>
+    {% for booking in mybookings %}
         <tr>
-            <th>User:</th>
-            <th>Check-in Date:</th>
-            <th>Number of Nights:</th>
-            <th>Type of room:</th>
+            <!-- Looks for upcoming bookings -->
+            {% if booking.check_in_date >= booking.today %}
+                <td>{{ booking.user }}</td>
+                <td>{{ booking.check_in_date|date:"d/m/Y" }}</td>
+                <td>{{ booking.number_of_nights }}</td>
+                <td>{{ booking.type_of_room}}</td>
+            {% endif %}
         </tr>
-        {% for booking in mybookings %}
-            <tr>
-                {% if booking.check_in_date >= booking.today %}
-                    <td>{{ booking.user }}</td>
-                    <td>{{ booking.check_in_date|date:"d/m/Y" }}</td>
-                    <td>{{ booking.number_of_nights }}</td>
-                    <td>{{ booking.type_of_room}}</td>
-                {% endif %}
-            </tr>
-        {% empty %}
-        <tr><td>You don't have any next bookings.</td></tr>
-        {% endfor %}
-    </table>
-    
-</body>
-</html>
+    <!-- Display message if no bookings are found -->
+    {% empty %}
+    <tr><td>You don't have any upcoming bookings.</td></tr>
+    {% endfor %}
+</table>
+
+{%endblock%}
