--- a/templates/base.html
+++ b/templates/base.html
@@ -27,18 +27,18 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="#">Logo</a>
+        <a class="navbar-brand" href="/">Home<span class="sr-only">(current)</span></a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Contact Us <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Book Now</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">My Bookings</a>
+                    <a class="nav-link" href="/mybookings">My Bookings</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sign Up</a>
