--- a/templates/base.html
+++ b/templates/base.html
@@ -35,10 +35,10 @@
                     <a class="nav-link" href="#">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Book Now</a>
+                    <a class="nav-link" href="/booknow/">Book Now</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/mybookings">My Bookings</a>
+                    <a class="nav-link" href="/mybookings/">My Bookings</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sign Up</a>
