--- a/templates/base.html
+++ b/templates/base.html
@@ -40,16 +40,25 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/mybookings/">My Bookings</a>
                 </li>
+                {% if user.is_authenticated %}
+                {% else %}        
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sign Up</a>
+                    <a class="nav-link" href="/accounts/signup/">Sign Up</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
         <div>
             <ul class="navbar-nav mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
-                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/accounts/logout/">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/accounts/login/">Login</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
