--- a/templates/mybookings.html
+++ b/templates/mybookings.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-
+            {% if user.is_authenticated %}
             <h1>My Bookings</h1>
 
             <!-- Table to display bookings -->
@@ -79,7 +79,14 @@
                 </tr>
                 {% endfor %}
             </table>
+            {% else %}
 
+            <h2>Please Sign in to view your bookings</h2>
+            <a href="{% url 'account_login' %}">
+                <button>Sign in</button>
+            </a>
+            
+            {% endif %}
         </div>
     </div>
 </div>
