--- a/templates/booknow.html
+++ b/templates/booknow.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{% load crispy_forms_tags %}
+
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-md-2">
@@ -10,7 +12,7 @@
 
             <form method="POST" action="/booknow/">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form | crispy }}
                 <div>
                     <p>
                         <button type="submit">Book Now</button>
