--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<h1>Home</h1>
-
+    <div class="container-fluid">
+        <div class="row">
+            <img class="img-fluid image1" src="https://res.cloudinary.com/marcellomuy/hotel-hero-img-zoom2.png" alt="">
+            <img class="img-fluid image2" src="https://res.cloudinary.com/marcellomuy/hotel-hero-img-zoom3.png" alt="">
+        </div>
+    </div>
 {% endblock %}
