--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,6 +7,8 @@
 
 {% block content %}
 
+{% load crispy_forms_tags %}
+
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
@@ -18,7 +20,7 @@
 
       <form class="login" method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form | crispy }}
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
