--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
         </div>
     </nav>
 
-    <div class="cantainer">
+    <div id="alert-container" class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 {% for message in messages %}
