--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container-fluid">
+    <div id="hero-img" class="container-fluid">
         <div class="row">
             <img class="img-fluid image1" src="https://res.cloudinary.com/marcellomuy/hotel-hero-img-zoom2.png" alt="">
             <img class="img-fluid image2" src="https://res.cloudinary.com/marcellomuy/hotel-hero-img-zoom3.png" alt="">
