--- a/templates/base.html
+++ b/templates/base.html
@@ -85,8 +85,8 @@
         {% endblock content %}
     </main>
     <!-- Footer -->
-    <footer class="fixed-bottom py-3">
-            <div class="footer mt-auto text-center"> 
+    <footer class="fixed-bottom py-3 bg-light">
+            <div id="footer" class="footer mt-auto text-center"> 
                 <a href="#"><i class="fab fa-facebook-square fa-2xl"></i></a>
                 <a href="#"><i class="fab fa-twitter-square fa-2xl"></i></a>
                 <a href="#"><i class="fab fa-instagram-square fa-2xl"></i></a>
