--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,7 @@
 {% block content %}
     <div id="hero-img" class="container-fluid">
         <div class="row">
-            <img class="img-fluid image1" src="https://res.cloudinary.com/marcellomuy/hotel-hero-img-zoom2.png" alt="">
-            <img class="img-fluid image2" src="https://res.cloudinary.com/marcellomuy/hotel-hero-img-zoom3.png" alt="">
+            <img class="img-fluid image1" src="https://res.cloudinary.com/marcellomuy/hotel-hero-img-zoom2.png" alt="Hotel lobby image">
         </div>
     </div>
 {% endblock %}
