--- a/templates/base.html
+++ b/templates/base.html
@@ -87,10 +87,9 @@
     <!-- Footer -->
     <footer class="fixed-bottom py-3 bg-light">
             <div id="footer" class="footer mt-auto text-center"> 
-                <a href="#"><i class="fab fa-facebook-square fa-2xl"></i></a>
-                <a href="#"><i class="fab fa-twitter-square fa-2xl"></i></a>
-                <a href="#"><i class="fab fa-instagram-square fa-2xl"></i></a>
-                <a href="#"><i class="fab fa-youtube-square fa-2xl"></i></a>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook-square fa-2xl"></i></a>
+                <a href="https://twitter.com/"><i class="fab fa-twitter-square fa-2xl"></i></a>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram-square fa-2xl"></i></a>
             </div>
     </footer>
 
