--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,9 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="{% url 'homepage' %}">Home<span class="sr-only">(current)</span></a>
+        <a class="navbar-brand" href="{% url 'homepage' %}">
+            <img id="hotel-logo" src="https://res.cloudinary.com/marcellomuy/image/upload/v1648893188/logo.png" alt="Hotel logo">
+        </a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
