Style forms, buttons and cards

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,11 +12,11 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
-
-      <h1>{% trans "Sign In" %}</h1>
-
-      <p>{% blocktrans %}If you have not created an account yet, then please
-        <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+      <div class="text-center">
+        <h1>{% trans "Sign In" %}</h1>
+        <p>{% blocktrans %}If you have not created an account yet, then please
+          <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+      </div>
 
       <form class="login" method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
@@ -24,7 +24,10 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+        <div class="col-md-12 text-center">
+          <button class="primaryAction btn btn-primary" type="submit">{% trans "Sign In" %}</button>          
+        </div>
+        
       </form>
     </div>
   </div>
