--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,10 @@ body {
     color: #2F4858;
 }
 
+h1 {
+  margin-top: 15px;
+}
+
 /* Navbar */
 .navbar {
   padding-top: 0;
@@ -36,6 +40,45 @@ body {
     width: 100%;
     object-fit: cover;
     max-height: 992px;
+}
+
+/* Give margin to headings */
+.mgn-h {
+  margin-top: 40px;
+}
+
+/* Give margin to buttons */
+.mgn-btn {
+  margin-top: 15px;
+}
+
+/* My bookings */
+.no-book-p  {
+  font-size: 20px;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+/* Remove * from form fields */
+.asteriskField {
+  display: none;
+}
+
+/* Form */
+form {
+  margin-top: 20px;
+}
+
+.book-h2 {
+  margin-top: 20px;
+}
+
+/* My bookings cards */
+.card-t {
+  font-size: 1.2em;
+}
+.card-mgn {
+  margin: 5px;
 }
 
 /* Footer */
