--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -11,10 +11,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
-      <h1>{% trans "Sign Up" %}</h1>
+      <div class="text-center">
+        <h1>{% trans "Sign Up" %}</h1>
 
-      <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
-      </p>
+        <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+        </p>
+      </div>
 
       <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
         {% csrf_token %}
@@ -22,7 +24,9 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+        <div class="col-md-12 text-center">
+          <button type="submit" class="btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
+        </div>
       </form>
     </div>
   </div>
