--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'homepage' %}">Home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Our Rooms</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'booknow' %}">Book Now</a>
