--- a/templates/updatebooking.html
+++ b/templates/updatebooking.html
@@ -6,16 +6,17 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8 offset-2">
-
-            <h1>Update your Booking</h1>
+        <div class="col-md-8 offset-md-2">
+            <div class="text-center">
+                <h1>Update your Booking</h1>
+            </div>
 
             <form method="POST">
                 {% csrf_token %}
                 {{ form | crispy }}
-                <div>
+                <div class="col-md-12 text-center">
                     <p>
-                        <button type="submit">Update Booking</button>
+                        <button class="btn btn-primary" type="submit">Update Booking</button>
                     </p>
                 </div>
             </form>
