--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,16 @@
 {% block content %}
     <div id="hero-img" class="container-fluid">
         <div class="row">
+            <div class="col-md-8 offset-md-2 index-info">
+                <h1>Welcome to Marco Polo Hotel!</h1>
+                <p>Located in Bray, the biggest town in County Wicklow, Ireland. 
+                    It is known as the Gateway to the Garden of Ireland and is the longest established seaside town in Ireland. 
+                    The hotel offers 120 comfortably furnished guest rooms. 
+                    All rooms have cable TV and wireless internet access. 
+                    All standard guest rooms are equipped with private bathrooms, hairdryers, spacious work desks, 
+                    direct-dial telephones, and satellite television.</p>
+                <p>We look forward to seeing you at Marco Polo Hotel!</p>
+            </div>
             <img class="img-fluid image1" src="https://res.cloudinary.com/marcellomuy/hotel-hero-img.png" alt="Hotel lobby image">
         </div>
     </div>
