--- a/templates/mybookings.html
+++ b/templates/mybookings.html
@@ -40,7 +40,7 @@
                 {% endfor %}
             </div>
         {% else %}
-            <h2 class="mgn-h">Please Sign in to view your bookings</h2>
+            <h2 class="mgn-h">Please sign in to view your bookings.</h2>
             <a href="{% url 'account_login' %}">
                 <button class="btn btn-primary mgn-btn">Sign in</button>
             </a>
