--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -25,7 +25,7 @@
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
         <div class="col-md-12 text-center">
-          <button type="submit" class="btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
+          <button type="submit" class="btn btn-primary">{% trans "Sign Up" %}</button>
         </div>
       </form>
     </div>
